use Double.valueOf/Float.valueOf instead of new Double/Float (Findbugs)
git-svn-id: https://svn.apache.org/repos/asf/jmeter/trunk@1226919 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: eb825091ae3a03dbe92005d86c3891215c673471